--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "dev": " nodemon ./build",
-    "start": "node app"
+    "start": "node build/index.js"
   },
   "keywords": [],
   "author": "",
