--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "dateformat": "^5.0.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs-extra": "^10.0.0",
     "helmet": "^4.6.0",
@@ -24,6 +25,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "mysql": "^2.14.1",
+    "mysql2": "^2.3.3",
     "promise-mysql": "^3.3.1",
     "reflect-metadata": "^0.1.10",
     "typeorm": "0.2.41",
